--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<title>トップ | エディター</title>
 		<meta name="description" content="サイト概要">
 		<meta name="keywords" content="キーワード1, キーワード2">
-		<link rel="stylesheet" href="/css/common.css">
+		<link rel="stylesheet" href="css/common.css">
 		<link rel="shortcut icon" href="//example.com/images/favicon.ico">
-		<script src="/js/other/jquery.min.js"></script>
-		<script src="/js/other/TweenMax.min.js"></script>
-		<script src="/js/other/jquery.inview.min.js"></script>
-		<script src="/js/other/t.min.js"></script>
+		<script src="js/other/jquery.min.js"></script>
+		<script src="js/other/TweenMax.min.js"></script>
+		<script src="js/other/jquery.inview.min.js"></script>
+		<script src="js/other/t.min.js"></script>
 		<meta property="og:title" content="エディター">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="//example.com/images/og-image.jpg">
